--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -8,7 +8,11 @@
 	<string>2</string>
 	<key>PlexClientPlatforms</key>
 	<string>*</string>
+	<key>PlexClientPlatformExclusions</key>
+	<string>MacOSX,Windows,Android,Plex Home Theater</string>
 	<key>PlexPluginRegions</key>
-	<string>CA</string>
+	<array>
+		<string>CA</string>
+	</array>
 </dict>
 </plist>
